# Smart-classroom

./: .gitignore  CHANGELOG.md  KEYSTORE_BASE64.txt  LICENSE  README.md  analysis_options.yaml  buildozer.spec  generate_icons.py  l10n.yaml  main.py  pubspec.yaml  requirements.txt
.github/workflows/: build.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
assets/: textbook_index.json
installer/: setup.iss
lib/: app.dart  main.dart
lib/l10n/: app_en.arb  app_zh.arb
lib/models/: class_model.dart  question_bank.dart  score_history.dart  sync_models.dart
lib/providers/: class_provider.dart  class_provider.dart   draw_provider.dart  leaderboard_provider.dart  question_provider.dart  question_provider.dart   services_provider.dart  settings_provider.dart  settings_provider.dart   sync_provider.dart  timer_provider.dart
lib/screens/: draw_panel.dart  home_screen.dart  leaderboard_panel.dart  onboarding_screen.dart  open_source_screen.dart  pdf_reader_screen.dart  question_panel.dart  textbook_browser_screen.dart  timer_panel.dart  usage_guide_screen.dart
lib/services/: annotation_storage_service.dart  audio_engine.dart  auto_sync_timer.dart  csv_parser.dart  data_service.dart  excel_service.dart  file_service.dart  gh_proxy_service.dart  network_time.dart  (+10 more)
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  resource.h  run_loop.cpp  run_loop.h  utils.cpp  utils.h  win32_window.cpp  win32_window.h
(+77 files in other folders)
